--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "qs": "^6.10.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "wangeditor": "^4.7.12"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
